# burst-communication-middleware

./: .gitmodules  Cargo.toml
examples/: Cargo.toml  broadcast.rs  gather_remote.rs  hello_world.rs  hello_world_local.rs  hello_world_remote.rs  large_broadcast.rs  large_send.rs  many_to_one.rs  reduce_example.rs  remote_reduce.rs
examples/src/: send_receive.rs
group-communication-middleware/: Cargo.toml
group-communication-middleware/src/: middleware.rs
src/: actor.rs  burst_message_relay.rs  chunk_store.rs  counter.rs  lib.rs  message_buffer.rs  message_store.rs  middleware.rs  rabbit.rs  rabbitmq.rs  redis.rs  redis_list.rs  redis_stream.rs  redislist.rs  s3.rs  tokio_channel.rs  types.rs
src/backends/: mod.rs  s3.rs
terasort/: Cargo.toml  generate_payload.py  sort_payload.json
terasort/src/: lib.rs  main.rs  sort.rs
