[package]
name = "burst-communication-middleware"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
bytes = "1.5.0"
futures = "0.3.29"
lapin = "2.3.1"
log = "0.4.20"
tokio = { version = "1.33.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
env_logger = "0.9.3"
uuid = { version = "1.5.0", features = ["v4"] }
redis = { version = "0.23.3", features = ["tokio-comp"] }
aws-sdk-s3 = "0.39.1"
aws-config = { version = "1.0.0", features = ["behavior-version-latest"] }
aws-credential-types = { version = "1.0.0", features = [
    "hardcoded-credentials",
] }

[[example]]
name = "hello_world"
