[package]
name = "burst-validation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next" }
aws-sdk-s3 = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next" }
aws-sdk-sqs = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next" }
polars = "0.32.1"
tokio = { version = "1.20.1", features = ["full"] }
http = "0.2"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
rayon = "1.8.0"
